# smartapply-architecture

./: .env.example  .gitignore  .replit  HUMAN_LOOP_VERIFICATION_REPORT.md  README.md  SETUP.md  SLACK_SETUP.md  SYSTEM_OVERVIEW_FOR_CHATGPT.md  add_companies_to_supabase.py  calibration_report.py  code_export_for_chatgpt.md  config.py  main.py  pm_jobs_for_chatgpt.md  processed_jobs.json  pyproject.toml  replit.md  requirements_human_loop.txt  run_calibration.py  run_simple_calibration.py  run_synthetic_calibration.py  scheduler.py  schema.sql  schema_fixed.sql  send_test_job.py  slack_events_server.py  start_job_monitor.py  test_reaction_tracking.py  test_supabase_integration.py  test_supabase_upgrade.py
api_clients/: airtable_client.py  greenhouse_client.py  job_board_discovery.py  lever_client.py  slack_client.py  slack_event_handler.py  supabase_client.py
app/: main.py  main_api.py
attached_assets/: Pasted--company-name-Waymo-domain-waymo-com-job-posting-externa-1755651472780_1755651472780.txt  Pasted--operations-version-v1-operations-op-upsert-table-compan-1755564226758_1755564226759.txt  Pasted-Got-it-Here-s-a-tight-step-by-step-requirements-update-that-matches-your-current-flow-no-Claude--1755652784673_1755652784674.txt  Pasted-Replit-AI-Agent-Multi-File-Upgrade-Plan-Supabase-Learning-Follow-these-steps-exactly-Create--1755543426203_1755543426204.txt  Pasted-Replit-Agent-Prompt-Create-Public-Sanitized-SmartApply-Portfolio-Repo-Goal-Create-a-public-GitHu-1755654271847_1755654271848.txt  (+3 more)
demo/: matching_demo.ipynb
matching/: concept_matcher.py  (+2 more)
(+18 files in other folders)
